# BoratoVHSStyle

./: .gitignore  BoratoVHSStyle.jucer  CMakeLists.txt  README.md  build_showcase.ps1  build_showcase_linux.sh
examples/DemoApp/: BoratoVHSStyleApp.jucer
examples/DemoApp/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
examples/KnobShowcase/: CMakeLists.txt  KnobShowcase.jucer
examples/KnobShowcase/Source/: Main.cpp  ShowcaseComponent.cpp  ShowcaseComponent.h
include/BoratoVHSStyle/: BoratoVHSStyle.h  Colours.h  Fonts.h  ThemeConfig.h
include/BoratoVHSStyle/Backgrounds/: ScanlinesOverlay.h  VHSGridBackground.h  VHSNoiseLayer.h
include/BoratoVHSStyle/Controls/: KnobGeometry.h  KnobStyle.h  VHSButton.h  VHSKnob.h  VHSKnobDigital.h  VHSKnobNeonRing.h  VHSKnobPro.h  VHSKnobProClaro.h  VHSLookAndFeel.h  VHSMeter.h  VHSSlider.h
include/BoratoVHSStyle/Utils/: AudioReactive.h  ThemeApply.h
modules/borato_vhsstyle/: borato_vhsstyle.cpp  borato_vhsstyle.h
src/: Colours.cpp  Fonts.cpp  ThemeConfig.cpp
src/Backgrounds/: ScanlinesOverlay.cpp  VHSGridBackground.cpp  VHSNoiseLayer.cpp
src/Controls/: KnobGeometry.cpp  VHSButton.cpp  VHSKnob.cpp  VHSKnobDigital.cpp  VHSKnobNeonRing.cpp  VHSKnobPro.cpp  VHSLookAndFeel.cpp  VHSMeter.cpp  VHSSlider.cpp
src/Utils/: AudioReactive.cpp  ThemeApply.cpp
